# atenex-services

./: .gitignore  ALL_READMES.md  Dockerfile  README.md  REFACTORING_INGEST_SERVICE.md  digrama.md  kafka.md  pyproject.toml  update_all_codebases.py
.github/workflows/: cicd-copy.yml  cicd.yml
api-gateway/: Dockerfile  README.md  full_codebase.md  pyproject.toml  refactor.md
api-gateway/app/: dependencies.py  main.py
api-gateway/app/auth/: auth_middleware.py  auth_service.py  jwt_handler.py
api-gateway/app/core/: config.py  logging_config.py
api-gateway/app/db/: postgres_client.py
api-gateway/app/routers/: admin_router.py  auth_router.py  gateway_router.py  query_models.py  user_router.py
api-gateway/app/utils/: supabase_admin.py
app/: main.py
app/api/v1/: schemas.py
app/api/v1/endpoints/: ingest.py
app/core/: config.py
app/db/: milvus_client.py  postgres_client.py
app/models/: domain.py
app/services/: chunking_client.py  embedding_client.py  minio_client.py  ocr_client.py  storage_client.py
app/tasks/: process_document.py
benchmarking/: benchmark_remote.py
benchmarking/performance_benchmark_results/: hkunlp_instructor-large_perf_b64_i10_w30.json  hkunlp_instructor-large_perf_b64_i10_w30.md  intfloat_e5-large-v2_perf_b64_i10_w30.md
docproc-service/: Dockerfile  full_codebase.md  pyproject.toml
docproc-service/app/: dependencies.py  main.py
docproc-service/app/application/ports/: extraction_port.py
docproc-service/app/core/: config.py
embedding-service/: Dockerfile  README.md  full_codebase.md  pyproject.toml  refactor.md
embedding-service/app/: main.py
embedding-service/app/api/v1/: schemas.py
embedding-service/app/core/: config.py
embedding-service/app/infrastructure/embedding_models/: fastembed_adapter.py  sentence_transformer_adapter.py
embedding-service/app/infrastructure/models/: fastembed_adapter.py
embedding-service/benchmarking/: measure_performance.py  run_mteb_evaluation.py
embedding-service/benchmarking/performance_benchmark_results/: intfloat_e5-large-v2_perf_b64_i10_w30.json
ingest-service/: .dockerignore  Dockerfile  README.md  REFACTOR_CHECKLIST.md  export_codebase.py  full_codebase.md  pyproject.toml  refactor.md
ingest-service/app/: main.py
ingest-service/app/api/v1/: schemas.py
ingest-service/app/api/v1/endpoints/: ingest.py  ingest_endpoint.py
ingest-service/app/application/ports/: chunk_repository_port.py  docproc_service_port.py  document_repository_port.py  embedding_service_port.py  file_storage_port.py  task_queue_port.py  vector_store_port.py
ingest-service/app/application/use_cases/: delete_document_use_case.py  get_document_stats_use_case.py  get_document_status_use_case.py  list_documents_use_case.py  process_document_use_case.py  retry_document_use_case.py  upload_document_use_case.py
ingest-service/app/core/: config.py
ingest-service/app/db/: postgres_client.py
ingest-service/app/domain/: entities.py  enums.py  exceptions.py
ingest-service/app/infrastructure/: dependency_injection.py
ingest-service/app/infrastructure/clients/: remote_docproc_adapter.py  remote_embedding_adapter.py
ingest-service/app/infrastructure/persistence/: postgres_chunk_repository.py  postgres_connector.py  postgres_document_repository.py
ingest-service/app/infrastructure/storage/: gcs_adapter.py
ingest-service/app/infrastructure/tasks/: celery_app_config.py  celery_task_adapter.py  celery_worker.py
ingest-service/app/infrastructure/vectorstore/: milvus_adapter.py
ingest-service/app/models/: domain.py
ingest-service/app/services/: base_client.py  embedder.py  gcs_client.py  ingest_pipeline.py  minio_client.py  text_splitter.py
ingest-service/app/services/clients/: docproc_service_client.py  embedding_service_client.py
ingest-service/app/services/extractors/: docx_extractor.py  html_extractor.py  md_extractor.py  pdf_extractor.py  txt_extractor.py
ingest-service/app/tasks/: process_document.py
query-service/: Dockerfile  README.md  cleanup_milvus.py  full_codebase.md  pyproject.toml  refactor.md
query-service/app/: main.py
query-service/app/api/v1/: schemas.py
query-service/app/api/v1/endpoints/: chat.py  query.py
query-service/app/application/ports/: __init__.py  repository_ports.py  retrieval_ports.py
query-service/app/application/use_cases/: ask_query_use_case.py
query-service/app/core/: config.py
query-service/app/db/: __init__.py  postgres_client.py
query-service/app/domain/: models.py
query-service/app/infrastructure/clients/: embedding_service_client.py
query-service/app/infrastructure/embedding/: remote_embedding_adapter.py
query-service/app/infrastructure/filters/: diversity_filter.py
query-service/app/infrastructure/llms/: gemini_adapter.py
query-service/app/infrastructure/persistence/: postgres_repositories.py
query-service/app/infrastructure/rerankers/: __init__.py  bge_reranker.py
query-service/app/infrastructure/retrievers/: __init__.py  bm25_retriever.py
query-service/app/infrastructure/vectorstores/: milvus_adapter.py
query-service/app/pipelines/: __init__.py  rag_pipeline.py
query-service/app/prompts/: general_template_gemini_v2.txt  map_prompt_template.txt  rag_template_gemini_v2.txt  reduce_prompt_template_v2.txt
query-service/app/services/: __init__.py  base_client.py  gemini_client.py
reranker-service/: Dockerfile  README.md  full_codebase.md  pyproject.toml  refactor.md
reranker-service/app/: dependencies.py  main.py
reranker-service/app/api/v1/: schemas.py
reranker-service/app/api/v1/endpoints/: rerank_endpoint.py  reranker_endpoint.py
reranker-service/app/application/ports/: reranker_model_port.py
reranker-service/app/application/use_cases/: rerank_texts_use_case.py
reranker-service/app/core/: config.py  logging_config.py
reranker-service/app/domain/: models.py
reranker-service/app/infrastructure/rerankers/: sentence_transformer_adapter.py
sparse-search-service/: full_codebase.md  pyproject.toml
sparse-search-service/app/: main.py
sparse-search-service/app/jobs/: index_builder_cronjob.py
(+7 files in other folders)
