[tool.poetry]
name = "ingest-service"
version = "0.1.0"
description = "Microservice for document ingestion and preprocessing"
authors = ["Mark Romero <mark.romero.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
celery = {extras = ["redis"], version = "^5.3.6"} # O usa RabbitMQ broker
httpx = "^0.27.0"
asyncpg = "^0.29.0" # O sqlalchemy[asyncio] + psycopg[binary]
pymilvus = "^2.4.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"} # Para JWT (aunque lo valide Gateway)
tenacity = "^8.2.3" # Para retries
python-multipart = "^0.0.9" # Para file uploads
structlog = "^24.1.0" # Para logging estructurado
minio = "^7.1.17" # Add minio client
# Opcional: Haystack (si se usan componentes directamente)
# haystack-ai = "^2.0.0"


[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
httpx = "^0.27.0" # Para test client

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"