[tool.poetry]
name = "ingest-service"
version = "0.1.0"
description = "Microservice for document ingestion and preprocessing"
authors = ["Mark Romero <mark.romero.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0" # <-- ADD THIS LINE
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
celery = {extras = ["redis"], version = "^5.3.6"}
httpx = "^0.27.0"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
tenacity = "^8.2.3"
python-multipart = "^0.0.9"
structlog = "^24.1.0"
aiofiles = "^23.2.1"
minio = "^7.1.17"

# --- Haystack Dependencies ---
haystack-ai = "^2.0.1"
openai = "^1.14.3"
milvus-haystack = "^0.0.6" # Verify package name/version

# --- Haystack Converter Dependencies ---
pypdf = "^4.0.1"
python-docx = "^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
httpx = "^0.27.0" # Para test client

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"