[tool.poetry]
name = "embedding-service"
version = "0.1.0"
description = "Atenex Embedding Service using FastAPI and FastEmbed"
authors = ["Atenex Team <dev@atenex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0" # For production deployments
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
tenacity = "^8.2.3" # For potential retries in clients if this service calls others (not typical for embedding service)

# --- Embedding Engine ---
fastembed = ">=0.3.0,<0.4.0" # Qdrant's FastEmbed
# sentence-transformers is a dependency of FastEmbed for many models,
# but FastEmbed manages its specific version.
# onnxruntime is also often a dependency for some FastEmbed models,
# ensure it's compatible or install explicitly if needed.
onnxruntime = "^1.18.0" # Recommended to align with ingest/query service if they also use it.

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
httpx = "^0.27.0" # For testing the API client-side

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"