[tool.poetry]
name = "ingest-service"
version = "0.3.1" # Version incrementada
description = "Ingest service for Atenex B2B SaaS (Postgres/GCS/Milvus/Remote Embedding Service - CPU - Prefork)" # Descripción actualizada
authors = ["Atenex Team <dev@atenex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
celery = {extras = ["redis"], version = "^5.3.6"}
asyncpg = "^0.29.0"
tenacity = "^8.2.3"
python-multipart = "^0.0.9"
structlog = "^24.1.0"

google-cloud-storage = "^2.16.0"

# --- ONNX Runtime ---
# onnxruntime = "^1.18.0" # Eliminado, ya no se usa directamente en ingest-service

# --- Core Processing Dependencies (v0.3.1) ---
pymupdf = "^1.25.0"
# sentence-transformers = "^2.7" # Eliminado, se usa el servicio externo
pymilvus = ">=2.4.1,<2.5.0"
tiktoken = "^0.7.0"

# --- Converter Dependencies (Standalone - Keep) ---
python-docx = ">=1.1.0,<2.0.0"
markdown = ">=3.5.1,<4.0.0"
beautifulsoup4 = ">=4.12.3,<5.0.0"
html2text = ">=2024.1.0,<2025.0.0"

# --- HTTP Client (API & Service Client - Keep) ---
httpx = {extras = ["http2"], version = "^0.27.0"} # Usado por EmbeddingServiceClient
h2 = "^4.1.0"

# --- Synchronous DB Dependencies (Worker - Keep) ---
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"