[tool.poetry]
name = "query-service"
version = "0.3.2"
description = "Query service for SaaS B2B using Clean Architecture, PyMilvus, Haystack & Advanced RAG with remote embeddings and reranking"
authors = ["Nyro <dev@nyro.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
tenacity = "^8.2.3"
structlog = "^24.1.0"

# --- Haystack Dependencies ---
# haystack-ai is kept for Document, PromptBuilder, etc.
haystack-ai = "^2.0.1"
pymilvus = "^2.4.1"

# --- LLM Dependency ---
google-generativeai = "^0.5.4"

# --- RAG Component Dependencies ---
# sentence-transformers is REMOVED as reranking is now external
bm2s = "0.1.3"
numpy = "1.26.4" # Kept, as bm2s or other parts might need it. Haystack might also use it.
# fastembed and fastembed-haystack are REMOVED as embedding is now external


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"